Routing, models, components, services and styles created

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,1 +1,19 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap')
+
+body
+    font-family: 'Poppins', sans-serif
+
+/* Color palette
+
+
+$blue-light: #2C85BC
+$blue-medium: #185A7D
+$blue-dark: #01426A
+$gray-light: #F2F2F2
+$gray-medium: #AAAAAA
+$gray-dark: #4B4B4B
+$green-light: #7ED876
+$black: #000000
+$yellow: #FFC600
+$red: #DF1C24
