--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,11 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap')
-
-body
-    font-family: 'Poppins', sans-serif
-
 /* Color palette
-
 
 $blue-light: #2C85BC
 $blue-medium: #185A7D
@@ -17,3 +12,27 @@ $green-light: #7ED876
 $black: #000000
 $yellow: #FFC600
 $red: #DF1C24
+
+/* Global classes
+
+body
+    font-family: 'Poppins', sans-serif
+
+.title__text
+    color: $blue-dark
+    font-weight: 400
+    font-size: 30px
+    margin: 2rem 0px 0px 0px !important
+
+.header__text
+    color: $blue-medium
+    font-weight: 400
+    font-size: 35px
+
+.description__text
+    color: $gray-medium
+    font-weight: 400
+    font-size: 18px
+.image__preview
+    position: relative
+    display: inline-block
