--- a/src/app/shared/components/loading/loading.component.html
+++ b/src/app/shared/components/loading/loading.component.html
@@ -1,1 +1,7 @@
-<p>loading works!</p>
+<div class="loading__container">
+    <img
+        src="../../../../assets/icons/Loading-Pokemon.gif"
+        alt="Loading"
+    >
+    <p class="header__text">Cargando...</p>
+</div>
