--- a/src/app/shared/components/profile-card/profile-card.component.html
+++ b/src/app/shared/components/profile-card/profile-card.component.html
@@ -1,1 +1,25 @@
-<p>profile-card works!</p>
+<div class="d-flex justify-content-center">
+    <mat-card class="starter__card">
+        <mat-card-header class="d-flex justify-content-center">
+            <p class="starter__card__title">Imágen Perfil</p>
+        </mat-card-header>
+        <mat-card-content>
+            <div class="d-flex justify-content-center">
+                <div class="image__preview">
+                    <img
+                        [src]="profileIcon || defaultImageUrl"
+                        alt="Preview"
+                        width="220"
+                        height="220"
+                        class="round__image"
+                    >
+                </div>
+            </div>
+            <br>
+            <div class="d-flex justify-content-space-between">
+                <div></div>
+                <div></div>
+            </div>
+        </mat-card-content>
+    </mat-card>
+</div>
