--- a/src/app/shared/components/profile-card/profile-card.component.sass
+++ b/src/app/shared/components/profile-card/profile-card.component.sass
@@ -4,12 +4,13 @@
     background-color: $yellow
     width: 392px
     padding-top: 10px
-    padding-bottom: 80px
+    padding-bottom: 20px
     border-radius: 45px
 .profile__card__title__preview
     font-size: 35px
     font-weight: 700
     color: $blue-medium
+    text-align: center
 .profile__card__title
     font-size: 24px
     font-weight: 500
@@ -20,5 +21,9 @@
     color: $gray-dark
 .profile__card__hobbie__description
     font-size: 24px
-    font-weight: 700
+    font-weight: 400
     color: $gray-dark
+.round__image
+    margin-top: 20px
+    border: 20px solid white
+    border-radius: 50%
