--- a/src/app/components/account-form/account-form.component.html
+++ b/src/app/components/account-form/account-form.component.html
@@ -3,11 +3,13 @@
         class="row"
         *ngIf="!isFetching"
     >
-        <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
+        <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
             <h2 class="header__text">
                 ¡Hola!
                 <span>Configuremos tu perfil</span>
             </h2>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
             <p class="description__text">Queremos conocerte mejor.</p>
             <div class="d-flex justify-content-center">
                 <mat-card class="starter__card">
@@ -75,10 +77,7 @@
                                 appearance="fill"
                             >
                                 <mat-label>Pasatiempos</mat-label>
-                                <mat-select
-                                    multiple
-                                    formControlName="hobbies"
-                                >
+                                <mat-select formControlName="hobbies">
                                     <mat-option value="soccer">Jugar Fútbol</mat-option>
                                     <mat-option value="basquetball">Jugar Basquetball</mat-option>
                                     <mat-option value="tennis">Jugar Tennis</mat-option>
@@ -134,6 +133,7 @@
                                     mat-raised-button
                                     class="submit__button"
                                     type="submit"
+                                    [disabled]="form.invalid"
                                 >
                                     Continuar
                                 </button>
