--- a/src/app/components/pokemon-list/pokemon-list.component.sass
+++ b/src/app/components/pokemon-list/pokemon-list.component.sass
@@ -4,7 +4,6 @@
     height: 50vh
     overflow-y: scroll
     padding: 5px 30px 0px 0px
-    border: 1px solid black
 
 .pokemon__card
     background-color: $gray-light
@@ -17,11 +16,9 @@
 .pokemon__image
     width: 96px
     height: 96px
-    // Assuming the image should be centered in the card without any translation
     position: absolute
     z-index: 1
     transform: translate(5%,-95%)
-
     margin: 0 auto
 
 .pokemon__description
@@ -38,17 +35,20 @@
     font-size: 12px
     font-weight: 800
     margin: 0 10px
-
 .yellow-background
     background-color: $yellow
-.submit__button[type="submit"]
+.pokemon__card__disabled
+    opacity: 0.5
+    cursor: not-allowed
+
+.submit__button
     width: 222px
     height: 50px
     border-radius: 10px
-    background-color: $blue-dark
-    color: white
+    &:enabled
+        background-color: $blue-dark
+        color: white
     &:hover
         background-color: $blue-medium
-
     &:active
         background-color: $blue-light
