--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -1,1 +1,64 @@
-<p>profile works!</p>
+<div class="container">
+    <div
+        class="row"
+        *ngIf="!isFetching"
+    >
+        <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
+            <div class="d-flex justify-content-start">
+                <h2 class="profile__title__text">
+                    ¡Hola {{trainer.name | titlecase | firstName}}!
+                </h2>
+                <div class="align__center">
+                    <button
+                        class="mat-raised-button edit__button"
+                        (click)="onProfileEditButton()"
+                    >
+                        <div class="d-flex justify-content-center">
+                            <img
+                                src="../../../assets/icons/edit-logo.svg"
+                                alt="Edit-Logo"
+                            >
+                            <p class="button__text">Editar perfil</p>
+                        </div>
+                    </button>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
+            <app-profile-card [trainer]="trainer"></app-profile-card>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
+            <div class="d-flex justify-content-between">
+                <span class="title__text">Pokémon</span>
+                <button
+                    class="mat-raised-button edit__button"
+                    (click)="onPokemonEditButton()"
+                >
+                    <div class="d-flex justify-content-center">
+                        <img
+                            src="../../../assets/icons/edit-logo.svg"
+                            alt="Edit-Logo"
+                        >
+                        <p class="button__text">Editar</p>
+                    </div>
+                </button>
+            </div>
+            <div>
+                <div class="row pokemon__showcase">
+                    <div
+                        class="col-sm-12 col-md-12 col-lg-12 col-xl-12"
+                        *ngFor="let pokemon of pokemons"
+                    >
+                        <app-user-pokemons [pokemon]="pokemon"></app-user-pokemons>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div
+        class="row"
+        *ngIf="isFetching"
+    >
+        <app-loading></app-loading>
+    </div>
+</div>
