--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -14,9 +14,9 @@
                 (click)="onRedirectDefaultPage()"
             >
                 <div class="d-flex justify-content-center">
-                    <p class="button__text">
+                    <span class="button__text">
                         {{trainer.name | titlecase | firstName}}
-                    </p>
+                    </span>
                 </div>
             </button>
             <img
