--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -10,7 +10,7 @@
                 </h2>
                 <div class="align__center">
                     <button
-                        class="mat-raised-button edit__button"
+                        class=" edit__button"
                         (click)="onProfileEditButton()"
                     >
                         <div class="d-flex justify-content-center">
@@ -18,7 +18,7 @@
                                 src="../../../assets/icons/edit-logo.svg"
                                 alt="Edit-Logo"
                             >
-                            <p class="button__text">Editar perfil</p>
+                            <span class="button__text">Editar perfil</span>
                         </div>
                     </button>
                 </div>
@@ -39,7 +39,7 @@
                             src="../../../assets/icons/edit-logo.svg"
                             alt="Edit-Logo"
                         >
-                        <p class="button__text">Editar</p>
+                        <span class="button__text">Editar</span>
                     </div>
                 </button>
             </div>
