--- a/src/app/components/pokemon-list/pokemon-list.component.html
+++ b/src/app/components/pokemon-list/pokemon-list.component.html
@@ -21,6 +21,7 @@
                 <mat-form-field
                     class="search col-sm-12 col-md-12 col-lg-8 col-xl-8"
                     floatLabel="always"
+                    appearance="outline"
                 >
                     <input
                         matInput
@@ -31,11 +32,13 @@
                 </mat-form-field>
             </div>
 
+
             <div class="row pokemon__list">
                 <div
                     class="col-sm-6 col-md-6 col-lg-4 col-xl-4"
                     *ngFor="let pokemon of pokemons"
                 >
+
 
                     <mat-card
                         class="pokemon__card"
