--- a/src/app/components/profile/profile.component.sass
+++ b/src/app/components/profile/profile.component.sass
@@ -6,6 +6,7 @@
     border: 1px solid $blue-dark
     border-radius: 10px
     cursor: pointer
+    padding: 8px 0px
 .pokemon__showcase
     height: 68vh
     overflow-y: scroll
