--- a/src/app/components/account-form/account-form.component.html
+++ b/src/app/components/account-form/account-form.component.html
@@ -4,10 +4,13 @@
         *ngIf="!isFetching"
     >
         <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
-            <h2 class="header__text">
+            <span
+                class="header__text"
+                style="font-weight: bold;"
+            >
                 ¡Hola!
-                <span>Configuremos tu perfil</span>
-            </h2>
+            </span>
+            <span class="header__text">Configuremos tu perfil</span>
         </div>
         <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
             <p class="description__text">Queremos conocerte mejor.</p>
@@ -51,6 +54,9 @@
 
 
 
+
+
+
         </div>
         <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
             <div class="form__container">
@@ -78,6 +84,9 @@
 
 
 
+
+
+
                             <mat-form-field
                                 class="form__fields"
                                 appearance="outline"
@@ -95,6 +104,9 @@
                                     <mat-option value="gaming">Jugar Videojuegos</mat-option>
                                 </mat-select>
                             </mat-form-field>
+
+
+
 
 
 
@@ -150,6 +162,9 @@
                                     Continuar
                                 </button>
                             </div>
+
+
+
 
 
 
