--- a/src/app/shared/components/profile-card/profile-card.component.html
+++ b/src/app/shared/components/profile-card/profile-card.component.html
@@ -7,8 +7,6 @@
             <span class="profile__card__title__preview">{{trainer.name | titlecase}}</span>
 
 
-
-
         </mat-card-header>
         <mat-card-header
             *ngIf="!isPreview"
@@ -39,7 +37,7 @@
                     <br>
                     <span>Edad:</span>
                     <br>
-                    <span>Dui:</span>
+                    <span>{{trainer.dui ? "Dui:" : ""}}</span>
                 </div>
                 <div class="align__right profile__card__hobbie__description">
                     <span>
@@ -48,9 +46,7 @@
                     <br>
                     <span>{{birthdate | age}} años</span>
                     <br>
-                    <span>
-                        {{trainer.dui ? trainer.dui : trainer.minors_id}}
-                    </span>
+                    <span>{{trainer.dui ? trainer.dui : ""}}</span>
                 </div>
             </div>
         </mat-card-content>
